--- a/src/components/navbar/navbar.css
+++ b/src/components/navbar/navbar.css
@@ -54,7 +54,7 @@
     position: absolute;
     top: 100%;
     left: 0;
-    background-color: #2A2A2A;
+    background-color: #121212;
     list-style: none;
     padding: 0;
     margin: 0;
@@ -62,6 +62,8 @@
     user-select: none;
     font-style: normal;
     text-align: center;
+    border: solid 1px red;
+    border-top: none;
 }
 
 .nav-menu-socials,
@@ -86,15 +88,15 @@
 }
 
 
-.nav-menu-socials:hover>.nav-menu-socials-sub-menu,
+.nav-menu-socials:hover > .nav-menu-socials-sub-menu,
 .nav-menu-socials-sub-menu:hover,
-.nav-menu-community:hover>.nav-menu-community-sub-menu,
+.nav-menu-community:hover > .nav-menu-community-sub-menu,
 .nav-menu-community-sub-menu:hover {
     display: flex;
     flex-direction: column;
 }
 
-.nav-menu-community:hover>.nav-menu-community-sub-menu,
+.nav-menu-community:hover > .nav-menu-community-sub-menu,
 .nav-menu-community-sub-menu:hover {
     margin-left: 2rem;
 }
