--- a/src/components/home/home.css
+++ b/src/components/home/home.css
@@ -16,6 +16,17 @@ section h1 {
 #home-content-wrapper {
     width: 100%;
     height: 100%;
+    scroll-snap-type: y mandatory;
+    overflow-y: auto;
+}
+
+#home-content-wrapper::-webkit-scrollbar {
+    display: none;
+}
+
+#home-content-wrapper-live {
+    width: 100%;
+    height: 100%;
     display: flex;
 }
 
@@ -28,4 +39,14 @@ section h1 {
 
 #video-live {
     flex-grow: 3;
+}
+
+#home-content-section {
+    height: 100%;
+    scroll-snap-align: start;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    font-size: 2rem;
+    color: white;
 }
