--- a/src/components/home/promo/scroller.css
+++ b/src/components/home/promo/scroller.css
@@ -1,15 +1,19 @@
-#promo-div {
-    max-height: 5rem;
+.scroller-container {
+    width: 100%;
+    height: 2rem;
     overflow: hidden;
-    white-space: nowrap;
-    width: 100vw;
-    background-color: #282c34;
-    color: white;
+    background-color: #1a1a1a;
+    border-bottom: 1px solid #B22222;
 }
 
-#promo-div-text {
-    animation: scroll 10s linear infinite;
+.scroller-text {
+    display: inline-block;
+    white-space: nowrap;
     padding-left: 100%;
+    animation: scroll 30s linear infinite;
+    color: white;
+    font-size: 1rem;
+    line-height: 2rem;
 }
 
 @keyframes scroll {
@@ -18,6 +22,10 @@
     }
 
     100% {
-        transform: translateX(-250vw);
+        transform: translateX(-100%);
     }
+}
+
+.scroller-text:hover {
+    animation-play-state: paused;
 }
