--- a/src/components/navbar/navbar.css
+++ b/src/components/navbar/navbar.css
@@ -15,6 +15,13 @@
     padding: 0px;
 }
 
+.nav-bar-wrapper {
+    position: sticky;
+    top: 0;
+    z-index: 1000;
+    background-color: #121212;
+}
+
 .nav-bar {
     display: flex;
     align-items: center;
@@ -22,10 +29,7 @@
     color: white;
     width: 100%;
     height: 5rem;
-    /* background-repeat: no-repeat; */
-    /* background-attachment: fixed; */
     border-bottom: 1px solid #B22222;
-    /* background-size: 100% 100%; */
 }
 
 .link {
